k8s/iris-deployment.yaml

apiVersion: apps/v1

kind: Deployment
metadata:
  name: iris-mlops
  namespace: mlops
  labels:
    app: iris-mlops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris-mlops
  template:
    metadata:
      labels:
        app: iris-mlops
    spec:
      containers:
      - name: iris-mlops
        image: nourbenmoulehom134/iris-mlops:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000


---
apiVersion: v1

kind: Service

metadata:
  name: iris-mlops
  namespace: mlops
spec:
  selector:
    app: iris-mlops
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
